--- a/src/app/components/Main/Main.module.css
+++ b/src/app/components/Main/Main.module.css
@@ -8,4 +8,5 @@
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
+    box-sizing: border-box;
 }
