--- a/src/app/components/PawPrint/PawPrint.module.css
+++ b/src/app/components/PawPrint/PawPrint.module.css
@@ -4,6 +4,7 @@
     pointer-events: none;
     z-index: 10;
     transform: scale(1);
+    box-sizing: border-box;
 }
 
 .pawSize {
