--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,6 +2,9 @@
 	text-align: center;
 	padding: 2rem 1rem;
 	position: relative;
+	width: 100%;
+	box-sizing: border-box;
+	margin: 0 auto;
 }
 
 .title {
